✨ Rebrand: Change KathaPe to Khatape across all files
- Updated app name in templates, PWA manifest, and service worker
- Changed display names in all HTML files
- Updated Python app initialization
- Modified documentation files
- Preserved database connection URLs (kept original kathape_database)
- Updated PWA install button tooltip
- All UI elements now display 'Khatape' branding

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "KathaPe Business",
-  "short_name": "KathaPe",
+  "name": "Khatape Business",
+  "short_name": "Khatape",
   "description": "Digital ledger and customer management for your business",
   "start_url": "/",
   "display": "standalone",
