fix: update manifest background and theme color to black for Khatape splash

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,8 +4,8 @@
   "description": "Digital ledger and customer management for your business",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#5c67de",
-  "theme_color": "#5c67de",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
