--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Business Flask App Requirements
 Flask==2.2.3
 Werkzeug==2.2.3
-psycopg2-binary==2.9.10
+appwrite==4.0.0
 requests==2.31.0
 python-dotenv==1.0.0
 qrcode==7.4.2
